--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,8 @@
   ],
   "require": {},
   "autoload": {
-    "psr-4": {
-      "Matrix\\Src\\": "src/"
-    }
+    "classmap": [
+      "src/"
+    ]
   }
 }
